; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tcrc32c.c_append_trivial.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tcrc32c.c_append_trivial.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@POLY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i64)* @append_trivial to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @append_trivial(i32 %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %7, align 8
  br label %9

9:                                                ; preds = %37, %3
  %10 = load i64, i64* %7, align 8
  %11 = load i64, i64* %6, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %40

13:                                               ; preds = %9
  %14 = load i32, i32* %4, align 4
  %15 = load i32*, i32** %5, align 8
  %16 = load i64, i64* %7, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = xor i32 %14, %18
  store i32 %19, i32* %4, align 4
  store i32 0, i32* %8, align 4
  br label %20

20:                                               ; preds = %33, %13
  %21 = load i32, i32* %8, align 4
  %22 = icmp slt i32 %21, 8
  br i1 %22, label %23, label %36

23:                                               ; preds = %20
  %24 = load i32, i32* %4, align 4
  %25 = ashr i32 %24, 1
  %26 = xor i32 %25, -2147483648
  %27 = load i32, i32* %4, align 4
  %28 = xor i32 %27, -1
  %29 = and i32 %28, 1
  %30 = load i32, i32* @POLY, align 4
  %31 = mul nsw i32 %29, %30
  %32 = xor i32 %26, %31
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %23
  %34 = load i32, i32* %8, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %8, align 4
  br label %20

36:                                               ; preds = %20
  br label %37

37:                                               ; preds = %36
  %38 = load i64, i64* %7, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %7, align 8
  br label %9

40:                                               ; preds = %9
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
